compiler/testData/multiplatform/incompatibleNestedClasses/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:1:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O1 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:2:11: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    class N1
          ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:3:15: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    interface N2
              ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:4:12: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    object N3
           ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:7:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O2 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:8:11: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    class N2
          ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:9:17: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    inner class I2
                ^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:12:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O3 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:13:12: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    object Companion
           ^^^^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:14:22: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    companion object Factory
                     ^^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:17:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect class O4 {
^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/common.kt:18:15: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
    companion object
              ^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:2:22: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class N1 : Any
  actual: public abstract actual interface N1 : Any
  reason: the class kinds are different (class, interface, object, enum, annotation)
    actual interface N1
                     ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:3:19: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public abstract expect interface N2 : Any
  actual: public final actual object N2 : Any
  reason: the class kinds are different (class, interface, object, enum, annotation)
    actual object N2
                  ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:4:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect object N3 : Any
  actual: public final actual class N3 : Any
  reason: the class kinds are different (class, interface, object, enum, annotation)
    actual class N3
                 ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:8:24: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect class N2 : Any
  actual: public final actual inner class N2 : Any
  reason: the modifiers are different (companion, inner, inline, value)
    actual inner class N2
                       ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:9:18: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect inner class I2 : Any
  actual: public final actual class I2 : Any
  reason: the modifiers are different (companion, inner, inline, value)
    actual class I2
                 ^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:13:22: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect object Companion : Any
  actual: public final actual companion object Companion : Any
  reason: the modifiers are different (companion, inner, inline, value)
    actual companion object {}
                     ^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:14:19: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect companion object Factory : Any
  actual: public final actual object Factory : Any
  reason: the modifiers are different (companion, inner, inline, value)
    actual object Factory
                  ^^^^^^^
compiler/testData/multiplatform/incompatibleNestedClasses/jvm.kt:18:19: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect companion object Companion : Any
  actual: public final actual object Companion : Any
  reason: the modifiers are different (companion, inner, inline, value)
    actual object Companion
                  ^^^^^^^^^
